--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MSSQL CONFIG
 #DATASOURCE
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://sqlserver-rm9999.database.windows.net:1433;database=dimdimdb;user=admsql@sqlserver-rm9999;password={your_password_here};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.url=jdbc:sqlserver://sqlserver-rm99573.database.windows.net:1433;database=dimdimdb;user=rm99573@sqlserver-rm99573;password=170504;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
 spring.datasource.username=admsql
 spring.datasource.password=devops@Fiap2tds
