--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://sqlserver-rm99573.database.windows.net:1433;database=dimdimdb;user=rm99573@sqlserver-rm99573;password=170504;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 
-spring.datasource.username=admsql
-spring.datasource.password=devops@Fiap2tds
+spring.datasource.username=rm99573
+spring.datasource.password=170504
 
 #JPA
 spring.jpa.hibernate.ddl-auto=update
